First project initialized

--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello World
+---
+layout: default
+title: Corey Senger
+---
+<div class="blurb">
+	<h1>This is a test for Corey Senger's page</h1>
+	<p>I do a lot of things, including tinkering with this god-awful html. Hopefully I'll be able to get markdown working in a sec</p>
+</div><!-- /.blurb -->
