--- a/papers/index.html
+++ b/papers/index.html
@@ -2,7 +2,7 @@
 layout: subpage
 title: Research Papers
 ---
-	<ul class="cards">
+	<ul class="cards cards-grid">
 		{% for paper in site.papers %}
 		<a href="{{ paper.url }}" class="card paper-card">
 			<img src="{{ paper.publisher-icon }}" alt="Publisher Logo" class="publisher-logo">
